# lab_tracked_robot

beginner_kubot_pkgs/: CMakeLists.txt
beginner_kubot_pkgs/B_kubot/: model.sdf
beginner_kubot_pkgs/msg/: angle_msgs.msg
beginner_kubot_pkgs/src/: B_kubot_plugin.cc
beginner_kubot_pkgs/src/kudos/: CKubot.cpp  CKubot.h
beginner_kubot_pkgs/worlds/: B_kubot.world
rc_lab_traked/tracked_robot/: CMakeLists.txt  package.xml
rc_lab_traked/tracked_robot/config/: joint_names_tracked_robot.yaml
rc_lab_traked/tracked_robot/launch/: concerthall.launch  factory.launch  refinery.launch  tracked_robot.launch  tracked_robot_concert.launch
rc_lab_traked/tracked_robot/src/: tracked_robot_plugin.cpp
rc_lab_traked/tracked_robot/tracked_robot_model/: model.config  model.sdf  ori_model.sdf  package.xml
rc_lab_traked/tracked_robot/tracked_robot_model/launch/: display.launch  gazebo.launch
rc_lab_traked/tracked_robot/tracked_robot_model/meshes/: Body.STL  Flipper_L.STL  Flipper_R.STL  Track_L.STL  Track_R.STL  arm_Link.STL
rc_lab_traked/tracked_robot/tracked_robot_model/urdf/: tracked_robot.urdf
rc_lab_traked/tracked_robot/urdf/: tracked_robot.csv
rc_lab_traked/tracked_robot/worlds/: concerthall.world  factory.world  refinery.world  tracked_robot.world  tracked_robot_concert.world
rc_lab_traked/tracked_robot/worlds/refinery/: blender.dae  meshlab.dae
rc_lab_traked/tracked_robot/worlds/sanitary_factory/w/: CMakeLists.txt  model.sdf
